Create Controllers and Views

--- a/admin/config/config.ini
+++ b/admin/config/config.ini
@@ -3,7 +3,7 @@ adapter  = Mysql
 host     = localhost
 username = webmis
 password = www.ksphp.com
-name     = webmis
+name     = pwebmis
 
 [application]
 controllersDir = admin/controllers/
