Set Default UserName and Password

--- a/app_admin/config/config.ini
+++ b/app_admin/config/config.ini
@@ -1,6 +1,6 @@
 [database]
  adapter = Mysql
- host = localhost
+ host = 222.56.42.154
  username = webmis
  password = www.ksphp.com
  name = pwebmis
