--- a/app_admin/config/config.ini
+++ b/app_admin/config/config.ini
@@ -13,6 +13,7 @@
  formsDir = forms/
  libraryDir = library/
  baseUri = /admin/
+ backupDir = ../../public/upload/backup/
 
 [webmis]
  appTitle = 'WebMIS Management'
