--- a/app_admin/config/config.ini
+++ b/app_admin/config/config.ini
@@ -13,7 +13,7 @@
  formsDir = forms/
  libraryDir = library/
  baseUri = /admin/
- backupDir = ../../public/upload/backup/
+ backupDir = /upload/backup/
 
 [webmis]
  appTitle = 'WebMIS Management'
