--- a/app_admin/config/config.ini
+++ b/app_admin/config/config.ini
@@ -1,9 +1,9 @@
 [database]
- adapter = 'Mysql'
- host = 'localhost'
- username = 'webmis'
- password = 'www.ksphp.com'
- name = 'pwebmis'
+ adapter = Mysql
+ host = localhost
+ username = webmis
+ password = www.ksphp.com
+ name = pwebmis
 
 [application]
  controllersDir = 'controllers'
