--- a/app_admin/config/config.ini
+++ b/app_admin/config/config.ini
@@ -1,15 +1,15 @@
 [database]
- adapter = Mysql
- host = localhost
- username = webmis
- password = www.ksphp.com
- name = pwebmis
+ adapter = 'Mysql'
+ host = 'localhost'
+ username = 'webmis'
+ password = 'www.ksphp.com'
+ name = 'pwebmis'
 
 [application]
  controllersDir = 'controllers'
  modelsDir = 'models'
  viewsDir = 'views'
- pluginsDir = 'plugins/'
+ pluginsDir = 'plugins'
  formsDir = 'forms'
  libraryDir = 'library'
  baseUri = '/admin/'
