--- a/app_m/config/config.ini
+++ b/app_m/config/config.ini
@@ -4,6 +4,7 @@
  username = 'webmis'
  password = 'www.ksphp.com'
  name = 'pwebmis'
+ charset = 'utf8'
 
 [application]
  controllersDir = 'controllers'
