--- a/public/admin/.htaccess
+++ b/public/admin/.htaccess
@@ -12,4 +12,4 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-l
 
-RewriteRule ^(.+)$ index.php [QSA,L]
+RewriteRule ^(.*)$ index.php?_url=/$1 [QSA,L]
